# SolarThermostat

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  doxy  sdkconfig  todo.txt
certs/: server.sh
components/mqtt/: CMakeLists.txt  mqtt.cpp
components/mqtt/include/: mqtt.hpp
components/mqttB/: CMakeLists.txt  mqtt.cpp  mqtt.h
components/nvsparameters/: CMakeLists.txt  nvsparameters.cpp  nvsparameters.hpp
components/nvsparameters/include/: nvsparameters.hpp
main/: CMakeLists.txt  CMakeLists.txt.full  TTimer.cpp  TTimer.h  TempSens.h  cmdDecoder.cpp  cmdDecoder.hpp  ds18b20.c  globals.h  gpio.c  loadParameters.c  main.c  main.cpp  mqtt.c  mqtt.cpp  mqtt.h  nvsparameters.cpp  nvsparameters.hpp  ota.c  ota.cpp  otafw.h  wifi.c  wifi.cpp  wifi.hpp
tests/: test.switch.c
